# qr_code_printer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  main.py  pyproject.toml
auth/: auth.py  users.py  utils.py
controller/: qr_controller.py
migrations/: env.py
model/: model.py
models/: __init__.py  db.py  model.py  schemas.py
routes/: __init__.py  auth_route.py  qr_routes.py  routes.py
tests/: test_batch.py  test_qr.py
