[tool.poetry]
name = "qr-code-printer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pyzbar = "^0.1.9"
pytest = "^8.2.2"
qrcode = {extras = ["pil"], version = "^7.4.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
