[tool.poetry]
name = "qr-code-printer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pyzbar = "^0.1.9"
pytest = "^8.2.2"
segno = "^1.6.1"
sqlmodel = "^0.0.19"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
